chore: code review, ajustes CORS, secure cookies, testes e specs de compliance/auth/excluidos (SDD)